[metadata]
name = catbase
version = 1.0.0
author = Milenakos
author_email = business@milenakos.tk
description = JSON-based database you were dreaming of!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/milena-kos/catbase
project_urls =
    Bug Tracker = https://github.com/milena-kos/catbase/issues
    repository = https://github.com/milena-kos/catbase
classifiers =
    Programming Language :: Python :: 3
    License :: Public Domain
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0

[options.packages.find]
where = src